# Earshot

./: .dockerignore  .gitignore  .prettierignore  CONTEXT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  integration_request.yml
.github/workflows/: ci.yml  release.yml
apps/ingest/: app.py
apps/ingest/tests/: conftest.py  test_api.py  test_capture_api.py  test_container_security.py  test_delivery_receipts.py  test_e2e.py  test_elevenlabs_connector.py  test_finalized_adapter_conformance.py  test_framework_integrations.py  test_ingest_security_regressions.py  test_live_tail.py  test_privacy_e2e.py  test_projects.py  test_real_provider_deliveries.py  test_retell_connector.py  test_ringg_connector.py  test_storage.py  test_turn_facts.py  test_vapi_connector.py
apps/ingest/tests/fixtures/connectors/: README.md
apps/viewer/: README.md  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
apps/viewer/src/: App.module.css  App.test.tsx  App.tsx  main.tsx
apps/viewer/src/api/: auth.ts  client.test.ts  client.ts  hooks.ts  schema.d.ts  tail.test.ts  tail.ts
apps/viewer/src/components/: EmptyState.module.css  EmptyState.tsx  Waveform.tsx
apps/viewer/src/features/fleet/: FleetDashboard.module.css  FleetDashboard.tsx  fleet.test.ts  fleet.ts
apps/viewer/src/features/inspector/: CallGraph.module.css  CallGraph.tsx  MediaCustody.a11y.test.tsx  MediaCustody.module.css  MediaCustody.tsx  RecoveryStrip.module.css  RecoveryStrip.tsx  SessionFacts.module.css  SessionFacts.tsx  SessionHeader.module.css  SessionHeader.tsx  SessionInspector.a11y.test.tsx  SessionInspector.module.css  SessionInspector.tsx  StageDrawer.tsx  TurnDrawer.module.css  TurnDrawer.tsx  TurnTimeline.module.css  TurnTimeline.tsx  drawer.module.css  inspector.a11y.test.tsx  timeline.test.ts  timeline.ts  useInitialFocus.ts
apps/viewer/src/features/inspector/__fixtures__/: analysis.json  incident.json
apps/viewer/src/features/inspector/__fixtures__/faults/: barge_in.explanation.json  device_unavailable.explanation.json  false_interruption.explanation.json  fast_endpointing.explanation.json  full_barge_in_chain.explanation.json  llm_delay.explanation.json  native_s2s_interruption.explanation.json  privacy_opt_out.explanation.json  render_delay.explanation.json  slow_endpointing.explanation.json  stale_buffer_playback.explanation.json  stt_delay.explanation.json  telephony_handoff.explanation.json  tool_timeout_retry.explanation.json  tts_delay.explanation.json  webrtc_degradation.explanation.json  websocket_reconnect.explanation.json
apps/viewer/src/features/live/: LiveBanner.module.css  LiveBanner.tsx  LiveSessionView.a11y.test.tsx  LiveSessionView.module.css  LiveSessionView.tsx  liveStore.test.ts  liveStore.ts  useSessionTail.ts
apps/viewer/src/features/sessions/: SessionRail.module.css  SessionRail.tsx
apps/viewer/src/lib/: format.test.ts  format.ts  status.ts
apps/viewer/src/styles/: global.css  tokens.css
apps/viewer/src/test/: utils.tsx
docs/: README.md  analysis.md  architecture.md  backend-api.md  captured-fixtures.md  conformance.md  connectors.md  development.md  incident-bundle.md  privacy.md  release.md  sdk.md  semantic-conventions.md  storage.md
docs/adapters/: livekit.md  pipecat.md  providers.md
docs/adr/: 0001-canonical-incidents-derived-turn-facts.md  0002-project-scope-and-external-identities.md  0003-finalized-connectors-before-live-otlp.md
docs/research/: external-observability-sdk-patterns.md  pre-release-first-principles-audit.md  pre-release-hardening-outcome.md
examples/livekit_console/: README.md  _runtime.py  agent.py  drive_audio.py  drive_once.py
examples/pipecat_headless/: README.md  drive.py
examples/provider_adapters/: drive_cartesia.py  drive_deepgram.py  drive_gemini.py  drive_sarvam.py  inspect_pipeline.py
fixtures/captured/: cartesia.incident.json  deepgram.incident.json  livekit.incident.json  manifest.json  pipecat.incident.json  sarvam.incident.json
fixtures/conformance/: canonical-vector.expected.json  canonical-vector.input.json
fixtures/faults/: barge_in.incident.json  device_unavailable.incident.json  false_interruption.incident.json  fast_endpointing.incident.json  full_barge_in_chain.incident.json  llm_delay.incident.json  native_s2s_interruption.incident.json  privacy_opt_out.incident.json  render_delay.incident.json  scenarios.json  security_regressions.json  slow_endpointing.incident.json  stale_buffer_playback.incident.json  stt_delay.incident.json  telephony_handoff.incident.json  tool_timeout_retry.incident.json  tts_delay.incident.json  webrtc_degradation.incident.json  websocket_reconnect.incident.json
fixtures/golden/: expected_semantics.json  livekit_metrics.json  pipecat_spans.json  tool_timeout_retry.otlp.json  webrtc_degradation.openinference.json
fixtures/invalid/: mutations.json
fixtures/valid/: complete.json  minimal.json
proto/earshot/v1/: incident.proto
proto/earshot/v1alpha1/: incident.proto
scripts/: check_release.py  check_sdist.py  check_semconv.py  check_wheel.py  generate_canonical_vector.py  generate_complete_fixture.py  generate_contract.py  generate_fault_fixtures.py  generate_openapi.py  generate_viewer_explanation_fixtures.py  scrub_captured_fixture.py  sdist_package_manifest.txt  smoke-container.sh  smoke_artifact.py
semconv/: README.md  earshot.yaml
spec/: backend-api.openapi.json  derived-analysis.schema.json  incident-bundle.schema.json
