[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "earshot-observability"
version = "0.1.0"
description = "The open-source Voice Observability SDK for real-time voice AI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Earshot contributors" }]
keywords = ["voice-ai", "observability", "opentelemetry", "sdk", "llmops"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.9,<3",
  "protobuf>=6.33.5,<7",
  "rfc8785==0.1.4",
]

[project.optional-dependencies]
server = [
  "fastapi>=0.115,<1",
  "uvicorn>=0.30,<1",
]
# Opt-in envelope encryption (AES-256-GCM) for the durable spool at rest. The
# base install stays dependency-light; import it lazily and only when a spool
# key is configured.
spool-encryption = ["cryptography>=42,<46"]
dev = [
  "build>=1.2,<2",
  "cryptography>=42,<46",
  "fastapi>=0.115,<1",
  "grpcio-tools==1.81.1",
  "httpx>=0.27,<1",
  "hypothesis>=6.120,<7",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "pytest-cov>=6,<7",
  "pyyaml>=6,<7",
  "ruff>=0.9,<1",
  "uvicorn>=0.30,<1",
]
otel = ["opentelemetry-api>=1.30,<2", "opentelemetry-sdk>=1.30,<2"]
pipecat = [
  "opentelemetry-api>=1.30,<2",
  "opentelemetry-sdk>=1.30,<2",
  "pipecat-ai[tracing]>=1.5.0,<1.6",
]
pipecat-groq = [
  "opentelemetry-api>=1.30,<2",
  "opentelemetry-sdk>=1.30,<2",
  "pipecat-ai[groq,tracing]>=1.5.0,<1.6",
]
livekit = [
  "livekit-agents>=1.6.5,<1.7",
  "opentelemetry-api>=1.30,<2",
  "opentelemetry-sdk>=1.30,<2",
]

[project.urls]
Homepage = "https://github.com/Kkartik14/Earshot"
Documentation = "https://github.com/Kkartik14/Earshot/tree/main/docs"
Repository = "https://github.com/Kkartik14/Earshot.git"
Issues = "https://github.com/Kkartik14/Earshot/issues"
Changelog = "https://github.com/Kkartik14/Earshot/releases"

[project.scripts]
earshot = "earshot.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["packages/sdk-python/src/earshot"]
# The viewer SPA is built into src/earshot/web by `pnpm bundle` (git-ignored);
# ship it in the wheel so `pip install earshot` serves the UI out of the box.
artifacts = ["packages/sdk-python/src/earshot/web/**"]

[tool.hatch.build.targets.sdist]
only-include = [
  "LICENSE",
  "README.md",
  "pyproject.toml",
  "packages/sdk-python/src/earshot",
]
exclude = [
  "/**/.DS_Store",
  "/**/__pycache__",
  "/**/*.pyc",
  "/**/*.pyo",
]
artifacts = [
  "packages/sdk-python/src/earshot/web/**",
  "!packages/sdk-python/src/earshot/web/**/*.map",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["packages/sdk-python/tests", "apps/ingest/tests"]
markers = [
  "unit: isolated contract or analysis tests",
  "integration: tests crossing storage or HTTP boundaries",
  "e2e: tests exercising a real server process and persistent database",
  "property: generative/property-based tests",
]

[tool.coverage.run]
branch = true
source = ["earshot"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 85

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["packages/sdk-python/src", "packages/sdk-python/tests", "apps/ingest/tests"]
exclude = ["packages/sdk-python/src/earshot/generated"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
